--- a/PyBank/main.ipynb
+++ b/PyBank/main.ipynb
@@ -3,8 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "083c8351-e80b-4d2a-aa26-e2e0614a9014",
-   "metadata": {},
+   "id": "d81b72b6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-06T16:44:43.303128Z",
+     "start_time": "2021-05-06T16:44:43.291150Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Import the pathlib and csv library\n",
@@ -15,14 +20,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7a002fcc-1db6-446b-a013-f2b399afc909",
-   "metadata": {},
+   "id": "668444fe",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-06T16:45:00.354474Z",
+     "start_time": "2021-05-06T16:45:00.345498Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/clark/Dropbox/Northwestern Bootcamp/python-homework_CS/PyBank\n"
+      "D:\\Dropbox\\Northwestern Bootcamp\\python-homework_CS\\PyBank\n"
      ]
     }
    ],
@@ -35,8 +45,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "79cb4ae7-0e04-4c08-835d-9a554a73740b",
+   "id": "4f609231",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-06T16:51:53.230491Z",
+     "start_time": "2021-05-06T16:51:52.878569Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -168,9 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bc2e4904-af0f-4aaf-9b22-3d4604bd8c04",
+   "execution_count": 6,
+   "id": "0a7fc5ea",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-06T16:52:40.400159Z",
+     "start_time": "2021-05-06T16:52:40.385200Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -191,9 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "13740686-c9c2-4df3-b048-003c2d8611f2",
-   "metadata": {},
+   "execution_count": 7,
+   "id": "118b566f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-06T16:52:41.815765Z",
+     "start_time": "2021-05-06T16:52:41.803798Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Loop through list of amount\n",
@@ -226,9 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b258a38f",
-   "metadata": {},
+   "execution_count": 8,
+   "id": "2d7addd2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-06T16:52:44.969814Z",
+     "start_time": "2021-05-06T16:52:44.953885Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -253,8 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7c3c4297",
+   "execution_count": null,
+   "id": "5baa1c77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8da3db3a",
+   "id": "9e12ff7e",
    "metadata": {},
    "outputs": [],
    "source": []
